fix: swagger erors
